--- a/index.css
+++ b/index.css
@@ -1,242 +1,328 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-image: url(/Images/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* ============================ Nav Bar Start ================================================== */
-.navArea .circle1{
-    border-radius: 50%;
-    margin-left: 4rem;
-    padding: 27px;
-    margin-bottom: -19px;
-    background-color: #fff;
-
+.navArea .circle1 {
+  border-radius: 50%;
+  margin-left: 4rem;
+  padding: 27px;
+  margin-bottom: -19px;
+  background-color: #fff;
 }
-.navleft{
-    margin-left: 12rem;
+.navleft {
+  margin-left: 12rem;
 }
 .box {
-	width: 100%;
-	background: #333;
-	display: inline-block
+  width: 100%;
+  background: #333;
+  display: inline-block;
 }
 #icon {
-	color: #fff;
-	font-size: 18px;
-	position: relative;
-	top: 5px;
-	font-weight: 500;
-	cursor: pointer;
-	padding-left: 10px;
+  color: #fff;
+  font-size: 18px;
+  position: relative;
+  top: 5px;
+  font-weight: 500;
+  cursor: pointer;
+  padding-left: 10px;
 }
 #icon a {
-	text-decoration: none
+  text-decoration: none;
 }
 nav {
-	display: none
+  display: none;
 }
 nav ul {
-	list-style-type: none;
-	padding-left: 0;
-	font-size: 0;
-	background-color: #11575C;
+  list-style-type: none;
+  padding-left: 0;
+  font-size: 0;
+  background-color: #11575c;
 }
 nav li {
-	display: block;
-	font-size: 16px;
-	color: white;
-	margin: 0 5px;
+  display: block;
+  font-size: 16px;
+  color: white;
+  margin: 0 5px;
 }
-ul.navArea>li>a {
-	color: #fff
+ul.navArea > li > a {
+  color: #fff;
 }
 nav a {
-	display: block;
-	padding: 10px;
-	text-decoration: none;
-	color: inherit
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: inherit;
 }
 .sub-menu li {
-	list-style-type: none;
-	display: inline-block;
-	width: 140px;
+  list-style-type: none;
+  display: inline-block;
+  width: 140px;
 }
 ul.navArea li ul.sub-menu {
-	display: none;
-	position: absolute
+  display: none;
+  position: absolute;
 }
 ul.navArea li {
-	position: relative;
+  position: relative;
 }
 ul.navArea li:hover ul.sub-menu {
-	display: block
+  display: block;
 }
 .sub-menu li {
-	margin-left: 0!important
+  margin-left: 0 !important;
 }
-ul.sub-menu>li>a {
-	color: #fff;
+ul.sub-menu > li > a {
+  color: #fff;
 }
-ul.navArea>li>a:hover, ul.sub-menu>li>a:hover {
-	color: deepskyblue;
+ul.navArea > li > a:hover,
+ul.sub-menu > li > a:hover {
+  color: deepskyblue;
 }
 #searchBox {
-	display: inline-block;
-	padding-top: 4px;
-	padding-right: 42px;
-	float: right
+  display: inline-block;
+  padding-top: 4px;
+  padding-right: 42px;
+  float: right;
 }
 #searchBox input {
-	width: 300px;
-	float: left;
-	border-radius: 2px 0 0 2px;
-	font-size: 14px;
-	box-sizing: border-box;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	font: inherit
+  width: 300px;
+  float: left;
+  border-radius: 2px 0 0 2px;
+  font-size: 14px;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  font: inherit;
 }
 #submitBtn {
-	width: auto!important;
-	float: right;
-	border-radius: 0 5px 5px 0;
-	background: #565656;
-	font-size: 13px;
-	font-weight: 600;
-	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
-	color: #fff
+  width: auto !important;
+  float: right;
+  border-radius: 0 5px 5px 0;
+  background: #565656;
+  font-size: 13px;
+  font-weight: 600;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  color: #fff;
 }
-@media only screen and (max-width:720px) {
-	nav ul {
-		width: 100%!important
-	}
-	#sub-menu {
-		display: none
-	}
-	nav a {
-		padding: 5px 10px
-	}
-	.box {
-		padding: 5px;
-	}
-	#navArea {
-		display: none;
-		height: 24px;
-		line-height: 24px;
-	}
-	.toggle-nav {
-		padding: 6px 10px
-	}
-	#searchBox input {
-		width: 150px;
-		padding: 5px;
-		margin: 0;
-	}
-	#icon img {
-		width: 22px;
-	}
+@media only screen and (max-width: 720px) {
+  nav ul {
+    width: 100% !important;
+  }
+  #sub-menu {
+    display: none;
+  }
+  nav a {
+    padding: 5px 10px;
+  }
+  .box {
+    padding: 5px;
+  }
+  #navArea {
+    display: none;
+    height: 24px;
+    line-height: 24px;
+  }
+  .toggle-nav {
+    padding: 6px 10px;
+  }
+  #searchBox input {
+    width: 150px;
+    padding: 5px;
+    margin: 0;
+  }
+  #icon img {
+    width: 22px;
+  }
 }
-@media only screen and (min-width:720px) {
-	#icon {
-		display: none
-	}
-	#navArea {
-		height: 50px;
-		line-height: 50px;
-	}
-	nav {
-		display: block!important
-	}
-	nav li {
-		display: inline-block
-	}
-	#searchBox input {
-		height: 50px;
-		padding: 10px;
-		margin: 5px 0;
-	}
-	#icon img {
-		width: 22px;
-	}
+@media only screen and (min-width: 720px) {
+  #icon {
+    display: none;
+  }
+  #navArea {
+    height: 50px;
+    line-height: 50px;
+  }
+  nav {
+    display: block !important;
+  }
+  nav li {
+    display: inline-block;
+  }
+  #searchBox input {
+    height: 50px;
+    padding: 10px;
+    margin: 5px 0;
+  }
+  #icon img {
+    width: 22px;
+  }
 }
 
 /* ============================ Navbar Section End ============================================== */
 
-.fafaitem-space{
-    margin-left: 4px;
+.fafaitem-space {
+  margin-left: 4px;
 }
 /* ================ Sliding Section Added ================================ */
+.container_2 {
+  position: relative;
+  width: 100%;
+  padding-left: 0%;
+  padding-right: 0%;
+}
+.items-position {
+  position: relative;
+}
+.img-heading {
+  position: absolute;
+  top: 20%;
+  left: 15%;
+}
+.img-heading h1 {
+  font-size: 6rem;
+  font-weight: 600;
+}
+.Arrow-position-1 {
+  position: absolute;
+  top: 90%;
+  left: 20%;
+}
+.Arrow-position-2 {
+  position: absolute;
+  top: 90%;
+  right: 20%;
+}
+.carousel-indicators {
+  display: none;
+}
+.cards-items-wish {
+  position: relative;
+}
+/* ====================== Sliding Images End ============================ */
 
-.images {display: none;
-position: relative;}
+/* ======================= Sliding Cards Start ===================================== */
 
-.top-left{
+.section-2-cardSlider{
+	margin-top: 16rem;
+}
+
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
+  max-width: 100%;
+}
+.cards-items-wish {
+  height: 100%;
+  padding: 4px;
+  text-align: center;
+}
+.padding-inner {
+  padding: 8px 60px;
+  border: none;
+  background-color: #f1f1f1;
+}
+.card-button-1 {
+  margin-top: 20px;
+  border: none;
+  font-size: medium;
+  font-weight: 600;
+  border-bottom: 2px solid black;
+  padding-bottom: 4px;
+  border-bottom-width: 4px;
+}
+.card-title {
+	font-weight: 700;
+    font-size: 26px;
+}
+/* ========= heart Shape ============== */
+input[type="checkbox"] {
+    display: none;
+}
+
+
+input[type="checkbox"] + label {
+    position: relative;
+    padding-left: 35px;
+    display: inline-block;
+    font-size: 16px;
+}
+ 
+input[type="checkbox"] + label:before {
+    content: "\2661";
+    top: -11px;
+    left: -8px;
+	font-size: 40px;
+    border: 1px solid transparent;    
+    padding: 10px;
+    border-radius: 3px;
+    display: block;
     position: absolute;
-    top: 6rem;
-    left: 12rem;
+	transition:  .5s ease;
 }
-.top-left h1{
+ 
+
+ 
+input[type="checkbox"]:checked + label:before {
+    border: 1px solid transparent;
+    background-color: transparent;
+}
+ 
+input[type="checkbox"]:checked + label:after {
+    content: '\2764';
+    font-size: 40px;
+    position: absolute;
+    top: -1px;
+    left: 0px;
+	color: red;
+	transition:  .5s ease;
+}
+.heart-shape{
+	position: absolute;
+    right: 3%;
+    top: -5%;
+}
+.carousel-control-next, .carousel-control-prev{
+	width: 5%;
+}
+
+.carousel-control-prev-icon{
+	background-image: url(/Images/leftvector.png);
+}
+.carousel-control-next-icon{
+	background-image: url(/Images/rightvector.png);
+}
+.carousel-control-next-icon, .carousel-control-prev-icon{
+     display: inline-block;
+	 width: 3rem;
+	 height: 5rem;
+	 background-repeat: no-repeat;
+	 color: black;
+	 background-position: 50%;
+	 background-size: 100% 100%;
+}
+.check-all-button{
+	border: 2px solid black;
+    padding: 12px 32px;
     font-size: 4rem;
+    font-weight: 600;
+    background-color: transparent;
 }
-      
-img {
-    vertical-align: middle;
-  width:100%;
-  height: 37rem;
+.checkalllatest{
+	margin-top: 8rem;
+	text-align: center;
 }
+ 
 
-/* Slideshow container */
-.carousel-container {
-   max-width: 100%;
-   position: relative;
-   margin: auto;
-}
-
-/* Next & previous buttons */
-.previous, .next {
-   cursor: pointer;
-   position: absolute;
-   top: 90%;
-   width: auto;
-   padding: 16px;
-   margin-top: -22px;
-   color: white;
-   font-weight: bold;
-   font-size: 18px;
-   transition: 0.6s ease;
-   border-radius: 0 3px 3px 0;
-   user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-   right: 0;
-   border-radius: 3px 0 0 3px;
-}
-
-
-/* On hover, add a black background color with a little bit seethrough */
-.prev:hover, .next:hover {
-   background-color: rgba(0,0,0,0.8);
-}
-
-
-/* The dots/bullets/indicators */
-.navigation-dot {
-   cursor: pointer;
-   height: 15px;
-   width: 15px;
-   margin: 0 2px;
-   background-color: #bbb;
-   border-radius: 50%;
-   display: inline-block;
-   transition: background-color 0.6s ease;
-}
-.dots-slider{
-    
-}
-.active, .navigation-dot:hover {
-   background-color: #717171;
-}
+/* ============ heart Shape end ============ */
+/* ======================== Sliding Cards End ===================================== */
