--- a/index.css
+++ b/index.css
@@ -434,13 +434,33 @@ input[type="checkbox"]:checked + label:after {
   }
   .footer-main-div{
 	display: grid;
-	grid-template-columns: auto auto auto auto;
-	gap: 10px;
-	background-color: #11575C;
-	padding: 10px;
+    grid-template-columns: auto auto auto auto;
+    gap: 153px;
+    background-color: #11575C;
+    margin-inline: 0px;
+    padding: 10px 63px;
   }
 .social-media-icon h2{
 	color: #D9D9D9;
 	font-size: 3rem;
 	font-weight: 900;
+}
+.social-media-icon p{
+	color: white;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+.company h2{
+	font-size: 28px;
+    font-weight: 600;
+    color: #D9D9D9;
+    line-height: 40px;
+}
+.links-About a{
+	color: white;
+    font-size: 16px;
+    line-height: 44px;
+    font-weight: 300;
 }
