--- a/index.css
+++ b/index.css
@@ -378,6 +378,9 @@ input[type="checkbox"]:checked + label:after {
 
 
 /* ====================== Section 4 Card Sliding ================================= */
+.section-4{
+  margin-top: 6rem;
+}
 .carousel-control-prev-icon{
 	background-image: url(/Images/leftvector.png);
 }
@@ -393,6 +396,7 @@ input[type="checkbox"]:checked + label:after {
 	 background-position: 50%;
 	 background-size: 100% 100%;
 }
+/* ======================Section 4 End ==============================*/
 
 /* ==================== Footer Section ===================================== */
 .fa {
@@ -439,6 +443,7 @@ input[type="checkbox"]:checked + label:after {
     background-color: #11575C;
     margin-inline: 0px;
     padding: 10px 63px;
+    margin-top: 6rem;
   }
 .social-media-icon h2{
 	color: #D9D9D9;
