--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +10,59 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.digit-count{
+  font-size: 9px;
+  font-weight: 600;
+  position: relative;
+  border-radius: 50%;
+  color: black;
+  border: 2px solid black;
+  top: -6px;
+  left: -10px;
+  padding: 3px;
+  background-color: white;
+}
 /* ============================ Nav Bar Start ================================================== */
+.mainLoginInput{
+  height: 40px;
+  padding: 0px;
+  font-size: 30px;
+  margin: 5px 0;
+}
+
+.mainLoginInput::-webkit-input-placeholder { 
+font-family: FontAwesome;
+font-weight: normal;
+overflow: visible;
+vertical-align: top;
+display: inline-block !important;
+padding-left: 5px;
+padding-top: 2px;
+color: hsl(9, 40%, 60%);
+}
+
+.mainLoginInput::-moz-placeholder  { 
+font-family: FontAwesome;
+font-weight: normal;
+overflow: visible;
+vertical-align: top;
+display: inline-block !important;
+padding-left: 5px;
+padding-top: 2px;
+color: hsl(9, 40%, 60%);
+}
+
+.mainLoginInput:-ms-input-placeholder  { 
+font-family: FontAwesome;
+font-weight: normal;
+overflow: visible;
+vertical-align: top;
+display: inline-block !important;
+padding-left: 5px;
+padding-top: 2px;
+color: hsl(9, 40%, 60%);
+}
+/* =============================== Searchbar icon placeholder ====================== */
 .navArea .circle1 {
   border-radius: 50%;
   margin-left: 4rem;
@@ -113,6 +166,10 @@ ul.sub-menu > li > a:hover {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
   color: #fff;
 }
+#submitBtn .search-fa-icon {
+  padding: 0px;
+}
+
 @media only screen and (max-width: 720px) {
   nav ul {
     width: 100% !important;
