--- a/CSS/Desktopcategory.css
+++ b/CSS/Desktopcategory.css
@@ -1,34 +1,34 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  body {
-    background-image: url(/Images/background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  .digit-count{
-    font-size: 9px;
-    font-weight: 600;
-    position: relative;
-    border-radius: 50%;
-    color: black;
-    border: 2px solid black;
-    top: -6px;
-    left: -10px;
-    padding: 3px;
-    background-color: white;
-  }
-  /* ============================ Nav Bar Start ================================================== */
-  .mainLoginInput{
-    height: 40px;
-    padding: 0px;
-    font-size: 30px;
-    margin: 5px 0;
-  }
-  
-  .mainLoginInput::-webkit-input-placeholder { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-image: url(/Images/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.digit-count {
+  font-size: 9px;
+  font-weight: 600;
+  position: relative;
+  border-radius: 50%;
+  color: black;
+  border: 2px solid black;
+  top: -6px;
+  left: -10px;
+  padding: 3px;
+  background-color: white;
+}
+/* ============================ Nav Bar Start ================================================== */
+.mainLoginInput {
+  height: 40px;
+  padding: 0px;
+  font-size: 30px;
+  margin: 5px 0;
+}
+
+.mainLoginInput::-webkit-input-placeholder {
   font-family: FontAwesome;
   font-weight: normal;
   overflow: visible;
@@ -37,9 +37,9 @@
   padding-left: 5px;
   padding-top: 2px;
   color: hsl(9, 40%, 60%);
-  }
-  
-  .mainLoginInput::-moz-placeholder  { 
+}
+
+.mainLoginInput::-moz-placeholder {
   font-family: FontAwesome;
   font-weight: normal;
   overflow: visible;
@@ -48,9 +48,9 @@
   padding-left: 5px;
   padding-top: 2px;
   color: hsl(9, 40%, 60%);
-  }
-  
-  .mainLoginInput:-ms-input-placeholder  { 
+}
+
+.mainLoginInput:-ms-input-placeholder {
   font-family: FontAwesome;
   font-weight: normal;
   overflow: visible;
@@ -59,247 +59,397 @@
   padding-left: 5px;
   padding-top: 2px;
   color: hsl(9, 40%, 60%);
-  }
-  /* =============================== Searchbar icon placeholder ====================== */
-  .navArea .circle1 {
-    border-radius: 50%;
-    margin-left: 4rem;
-    padding: 27px;
-    margin-bottom: -19px;
-    background-color: #fff;
-  }
-  .navleft {
-    margin-left: 12rem;
-  }
-  .box {
-    width: 100%;
-    background: #333;
-    display: inline-block;
-  }
-  #icon {
-    color: #fff;
-    font-size: 18px;
-    position: relative;
-    top: 5px;
-    font-weight: 500;
-    cursor: pointer;
-    padding-left: 10px;
-  }
-  #icon a {
-    text-decoration: none;
-  }
-  nav {
-    display: none;
-  }
+}
+/* =============================== Searchbar icon placeholder ====================== */
+.navArea .circle1 {
+  border-radius: 50%;
+  margin-left: 4rem;
+  padding: 27px;
+  margin-bottom: -19px;
+  background-color: #fff;
+}
+.navleft {
+  margin-left: 12rem;
+}
+.box {
+  width: 100%;
+  background: #333;
+  display: inline-block;
+}
+#icon {
+  color: #fff;
+  font-size: 18px;
+  position: relative;
+  top: 5px;
+  font-weight: 500;
+  cursor: pointer;
+  padding-left: 10px;
+}
+#icon a {
+  text-decoration: none;
+}
+nav {
+  display: none;
+}
+nav ul {
+  list-style-type: none;
+  padding-left: 0;
+  font-size: 0;
+  background-color: #11575c;
+}
+nav li {
+  display: block;
+  font-size: 16px;
+  color: white;
+  margin: 0 5px;
+}
+ul.navArea > li > a {
+  color: #fff;
+}
+nav a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: inherit;
+}
+.sub-menu li {
+  list-style-type: none;
+  display: inline-block;
+  width: 140px;
+}
+ul.navArea li ul.sub-menu {
+  display: none;
+  position: absolute;
+}
+ul.navArea li {
+  position: relative;
+}
+ul.navArea li:hover ul.sub-menu {
+  display: block;
+}
+.sub-menu li {
+  margin-left: 0 !important;
+}
+ul.sub-menu > li > a {
+  color: #fff;
+}
+ul.navArea > li > a:hover,
+ul.sub-menu > li > a:hover {
+  color: deepskyblue;
+}
+#searchBox {
+  display: inline-block;
+  padding-top: 4px;
+  padding-right: 42px;
+  float: right;
+}
+#searchBox input {
+  width: 300px;
+  float: left;
+  border-radius: 2px 0 0 2px;
+  font-size: 14px;
+  box-sizing: border-box;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  font: inherit;
+}
+#submitBtn {
+  width: auto !important;
+  float: right;
+  border-radius: 0 5px 5px 0;
+  background: #565656;
+  font-size: 13px;
+  font-weight: 600;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
+  color: #fff;
+}
+#submitBtn .search-fa-icon {
+  padding: 0px;
+}
+
+@media only screen and (max-width: 720px) {
   nav ul {
-    list-style-type: none;
-    padding-left: 0;
-    font-size: 0;
-    background-color: #11575c;
+    width: 100% !important;
   }
-  nav li {
-    display: block;
-    font-size: 16px;
-    color: white;
-    margin: 0 5px;
-  }
-  ul.navArea > li > a {
-    color: #fff;
+  #sub-menu {
+    display: none;
   }
   nav a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: inherit;
+    padding: 5px 10px;
   }
-  .sub-menu li {
-    list-style-type: none;
-    display: inline-block;
-    width: 140px;
+  .box {
+    padding: 5px;
   }
-  ul.navArea li ul.sub-menu {
+  #navArea {
     display: none;
-    position: absolute;
+    height: 24px;
+    line-height: 24px;
   }
-  ul.navArea li {
-    position: relative;
-  }
-  ul.navArea li:hover ul.sub-menu {
-    display: block;
-  }
-  .sub-menu li {
-    margin-left: 0 !important;
-  }
-  ul.sub-menu > li > a {
-    color: #fff;
-  }
-  ul.navArea > li > a:hover,
-  ul.sub-menu > li > a:hover {
-    color: deepskyblue;
-  }
-  #searchBox {
-    display: inline-block;
-    padding-top: 4px;
-    padding-right: 42px;
-    float: right;
+  .toggle-nav {
+    padding: 6px 10px;
   }
   #searchBox input {
-    width: 300px;
-    float: left;
-    border-radius: 2px 0 0 2px;
-    font-size: 14px;
-    box-sizing: border-box;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    font: inherit;
+    width: 150px;
+    padding: 5px;
+    margin: 0;
   }
-  #submitBtn {
-    width: auto !important;
-    float: right;
-    border-radius: 0 5px 5px 0;
-    background: #565656;
-    font-size: 13px;
-    font-weight: 600;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
-    color: #fff;
+  #icon img {
+    width: 22px;
   }
-  #submitBtn .search-fa-icon {
-    padding: 0px;
-  }
-  
-  @media only screen and (max-width: 720px) {
-    nav ul {
-      width: 100% !important;
-    }
-    #sub-menu {
-      display: none;
-    }
-    nav a {
-      padding: 5px 10px;
-    }
-    .box {
-      padding: 5px;
-    }
-    #navArea {
-      display: none;
-      height: 24px;
-      line-height: 24px;
-    }
-    .toggle-nav {
-      padding: 6px 10px;
-    }
-    #searchBox input {
-      width: 150px;
-      padding: 5px;
-      margin: 0;
-    }
-    #icon img {
-      width: 22px;
-    }
-  }
-  @media only screen and (min-width: 720px) {
-    #icon {
-      display: none;
-    }
-    #navArea {
-      height: 50px;
-      line-height: 50px;
-    }
-    nav {
-      display: block !important;
-    }
-    nav li {
-      display: inline-block;
-    }
-    #searchBox input {
-      height: 50px;
-      padding: 10px;
-      margin: 5px 0;
-    }
-    #icon img {
-      width: 22px;
-    }
-  }
-  
-  /* ============================ Navbar Section End ============================================== */
-  .fafaitem-space {
-    margin-left: 4px;
-  }
-  /* ================ Sliding Section Added ================================ */
-  .container_2 {
-    position: relative;
-    width: 100%;
-    padding-left: 0%;
-    padding-right: 0%;
-  }
-  .items-position {
-    position: relative;
-  }
-  .img-heading {
-    position: absolute;
-    top: 6%;
-    right: 6%;
-  }
-  .img-heading h1 {
-    font-size: 6rem;
-    color: black;
-    font-weight: 600;
-  }
-  .Arrow-position-1 {
-    position: absolute;
-    top: 90%;
-    left: 20%;
-  }
-  .Arrow-position-2 {
-    position: absolute;
-    top: 90%;
-    right: 20%;
-  }
-  .carousel-indicators {
+}
+@media only screen and (min-width: 720px) {
+  #icon {
     display: none;
   }
-  .cards-items-wish {
-    position: relative;
+  #navArea {
+    height: 50px;
+    line-height: 50px;
   }
-  .container,
+  nav {
+    display: block !important;
+  }
+  nav li {
+    display: inline-block;
+  }
+  #searchBox input {
+    height: 50px;
+    padding: 10px;
+    margin: 5px 0;
+  }
+  #icon img {
+    width: 22px;
+  }
+}
+
+/* ============================ Navbar Section End ============================================== */
+.fafaitem-space {
+  margin-left: 4px;
+}
+/* ================ Sliding Section Added ================================ */
+.container_2 {
+  position: relative;
+  width: 100%;
+  padding-left: 0%;
+  padding-right: 0%;
+}
+.items-position {
+  position: relative;
+}
+.img-heading {
+  position: absolute;
+  top: 6%;
+  right: 6%;
+}
+.img-heading h1 {
+  font-size: 6rem;
+  color: black;
+  font-weight: 600;
+}
+.Arrow-position-1 {
+  position: absolute;
+  top: 90%;
+  left: 20%;
+}
+.Arrow-position-2 {
+  position: absolute;
+  top: 90%;
+  right: 20%;
+}
+.carousel-indicators {
+  display: none;
+}
+.cards-items-wish {
+  position: relative;
+}
+.container,
 .container-lg,
 .container-md,
 .container-sm,
 .container-xl {
   max-width: 100%;
 }
-  /* ====================== Sliding Images End ============================ */
+/* ====================== Sliding Images End ============================ */
 
-  /* ====================== Section 2 ============================== ========================*/
+/* ====================== Section 2 ============================== ========================*/
 
-  /* ======================== Shop By Categories ================================= */
-.section-3{
-	padding-inline: 12rem;
-	margin-top: 6rem;
+/* ======================== Shop By Categories ================================= */
+.section-3 {
+  padding-inline: 12rem;
+  margin-top: 6rem;
 }
-.sectin3-heading h1{
-	font-size: 5rem;
-	font-weight: 700;
+.sectin3-heading h1 {
+  font-size: 5rem;
+  font-weight: 700;
 }
-.catehories-maindiv{
-	margin-top: 4rem;
-	display: grid;
+.catehories-maindiv {
+  margin-top: 4rem;
+  display: grid;
   grid-template-columns: auto auto;
-  gap: 60px; 
+  gap: 60px;
   padding: 10px;
 }
-.img1-div{
-	position: relative;
-	width: fit-content;
-
+.img1-div {
+  position: relative;
+  width: fit-content;
 }
-.img1-div img{
-	width: 100%;
+.img1-div img {
+  width: 100%;
+}
+.shop-category-button {
+  position: absolute;
+  top: 0%;
+  text-align: start;
+  right: 0px;
+  background-color: black;
+  font-size: 30px;
+  color: white;
+  font-weight: 700;
+  border: none;
+  padding: 3px 12px;
+}
+.check-browscategory-button {
+  border: 2px solid black;
+  padding: 12px 32px;
+  font-size: 4rem;
+  font-weight: 600;
+  background-color: transparent;
+}
+.browsallcategory {
+  margin-top: 12rem;
+  text-align: center;
+}
+
+/* ============================== Heart Shape ================================= */
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"] + label {
+  position: relative;
+  padding-left: 35px;
+  display: inline-block;
+  font-size: 16px;
+}
+
+input[type="checkbox"] + label:before {
+  content: "\2665";
+  top: -11px;
+  left: -8px;
+  font-size: 40px;
+  border: 1px solid transparent;
+  padding: 10px;
+  border-radius: 3px;
+  color: white;
+  display: block;
+  position: absolute;
+  transition: 0.5s ease;
+}
+
+input[type="checkbox"]:checked + label:before {
+  border: 1px solid transparent;
+  background-color: transparent;
+}
+
+input[type="checkbox"]:checked + label:after {
+  content: "\2764";
+  font-size: 40px;
+  position: absolute;
+  top: 2px;
+  left: -3px;
+  color: red;
+  transition: 0.5s ease;
+}
+.heart-shape {
+  position: absolute;
+  right: 3%;
+  top: -2%;
+}
+/* ================================ heart Shape END ======================================= */
+
+.shoes-details {
+  text-align: center;
+  font-weight: 600;
+  margin-top: 22px;
+  font-size: 22px;
+  line-height: 33px;
+}
+.checked {
+  color: orange;
+}
+
+.seemore-btn {
+  float: right;
+  border-radius: 28px;
+  margin-top: 12px;
+  border: 3px solid #6c6c6c;
+  margin-right: 40px;
+  background: transparent;
+  font-size: 24px;
+  color: #6c6c6c;
+  padding: 7px 27px;
+}
+/* ================== Shop By Category END ============================== */
+
+/* ===================== Image Slider ======================================= */
+
+.section-2-cardSlider{
+	margin-top: 16rem;
+}
+
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
+  max-width: 100%;
+}
+.cards-items-wish {
+  height: 100%;
+  padding: 4px;
+  text-align: center;
+}
+
+.card-button-1 {
+  margin-top: 20px;
+  border: none;
+  font-size: medium;
+  font-weight: 600;
+  border-bottom: 2px solid black;
+  padding-bottom: 4px;
+  border-bottom-width: 4px;
+}
+.card-title {
+	font-weight: 700;
+    font-size: 26px;
+}
+.carousel-control-next, .carousel-control-prev{
+	width: 5%;
+}
+
+.carousel-control-prev-icon{
+	background-image: url(/Images/whitevectorleft.png);
+}
+.carousel-control-next-icon{
+	background-image: url(/Images/whitevectorright.png);
+}
+.carousel-control-next-icon, .carousel-control-prev-icon{
+    display: inline-block;
+    width: 4rem;
+    padding: 32px;
+    background-color: black;
+    height: 5rem;
+    background-repeat: no-repeat;
+    color: black;
+    background-position: 50%;
+    background-size: 100% 100%;
+}
+.padding-inner{
+    position: relative;
 }
 .shop-category-button{
 	position: absolute;
-    top: 0%;
+    top: 85%;
     text-align: start;
     right: 0px;
     background-color: black;
@@ -309,80 +459,85 @@
     border: none;
     padding: 3px 12px;
 }
-.check-browscategory-button{
-	border: 2px solid black;
-    padding: 12px 32px;
-    font-size: 4rem;
-    font-weight: 600;
-    background-color: transparent;
+.padding-inner img{
+    width: 100%;
+
 }
-.browsallcategory{
-	margin-top: 8rem;
-	text-align: center;
+.justify-content-around{
+    gap: 4rem;
+    justify-content: center!important;
 }
 
-/* ============================== Heart Shape ================================= */
-input[type="checkbox"] {
-    display: none;
-}
-
-
-input[type="checkbox"] + label {
-    position: relative;
-    padding-left: 35px;
-    display: inline-block;
-    font-size: 16px;
-}
- 
-input[type="checkbox"] + label:before {
-    content: "\2665";
-    top: -11px;
-    left: -8px;
-	font-size: 40px;
-    border: 1px solid transparent;    
-    padding: 10px;
-    border-radius: 3px;
-    color: white;
-    display: block;
-    position: absolute;
-	transition:  .5s ease;
-}
- 
-
- 
-input[type="checkbox"]:checked + label:before {
-    border: 1px solid transparent;
-    background-color: transparent;
-}
- 
-input[type="checkbox"]:checked + label:after {
-    content: '\2764';
-    font-size: 40px;
-    position: absolute;
-    top: 2px;
-    left: -3px;
-	color: red;
-	transition:  .5s ease;
-}
-.heart-shape{
-	position: absolute;
-    right: 3%;
-    top: -2%;
-}
-/* ================================ heart Shape END ======================================= */
-
-.shoes-details{
+/* ==================== Footer Section ===================================== */
+.fa {
+	padding: 12px;
+    font-size: 24px;
+    width: 50px;
+    height: 52px;
     text-align: center;
-    font-weight: 600;
-    margin-top: 22px;
-    font-size: 22px;
-    line-height: 33px;
-    
-}
-.checked {
-    color: orange;
+    text-decoration: none;
+    margin: 8px 8px;
   }
-/* ================== Shop By Category END ============================== */
-
-
   
+  .fa:hover {
+	  opacity: 0.7;
+  }
+.social-media-icon .fa-facebook {
+	background: white;
+	border-radius: 15px;
+	color: #11575C;
+  }
+  .social-media-icon .fa-instagram {
+	background: white;
+	border-radius: 15px;
+	color: #11575C;
+  }
+  .social-media-icon .fa-twitter {
+	background: white;
+	border-radius: 15px;
+	color: #11575C;
+  }
+  .social-media-icon .fa-linkedin {
+	background: white;
+	border-radius: 15px;
+	color: #11575C;
+  }
+  .links-About{
+	display: flex;
+	flex-direction: column;
+  }
+  .footer-main-div{
+	display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 153px;
+    background-color: #11575C;
+    margin-inline: 0px;
+    padding: 10px 63px;
+    margin-top: 6rem;
+  }
+.social-media-icon h2{
+	color: #D9D9D9;
+	font-size: 3rem;
+	font-weight: 900;
+}
+.social-media-icon p{
+	color: white;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+.company h2{
+	font-size: 28px;
+    font-weight: 600;
+    color: #D9D9D9;
+    line-height: 40px;
+}
+.links-About a{
+	color: white;
+    font-size: 16px;
+    line-height: 44px;
+    font-weight: 300;
+}
+
+/* ========================== Footer Section End ========================== */
