--- a/index.css
+++ b/index.css
@@ -526,3 +526,5 @@ input[type="checkbox"]:checked + label:after {
     line-height: 44px;
     font-weight: 300;
 }
+
+/* ==================== Footer Section End ====================================== */
