--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -26,8 +26,11 @@ input[type="password"]:hover {
   border: 3px solid #22a1a9;
  
 }
+label{
+  font-size: 28px;
+}
 .username-div{
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 button {
@@ -37,6 +40,7 @@ button {
     #00acac 48.8%,
     #22a1a9 91.16%
   );
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
   padding: 14px 20px;
   border-radius: 24px;
@@ -120,16 +124,7 @@ label b {
 .username-icon {
   position: relative;
 }
-.username-icon .fa-regular {
-  position: absolute;
-  top: 15px;
-  font-size: 26px;
-  right: 18px;
-  color: #b3b3b3;
-}
-.username-icon .fa-regular:hover {
-  color: #22a1a9;
-}
+
 .username-icon .fa-solid {
   position: absolute;
   top: 15px;
@@ -139,104 +134,4 @@ label b {
 }
 .username-icon .fa-solid:hover {
   color: #22a1a9;
-}
-.sign-in-with-fb {
-  background: transparent;
-  border: 2px solid #03c0fc;
-  color: black;
-  padding: 14px 20px;
-  border-radius: 24px;
-  margin: 8px 0;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 24px;
-  width: 100%;
-}
-.social-icon-1 {
-  position: relative;
-  margin-top: 2rem;
-  border-radius: 14px;
-}
-.sign-in-with-google {
-  background: transparent;
-  border: 2px solid transparent;
-  position: relative;
-  background: linear-gradient(white, white) padding-box,
-    linear-gradient(
-        to right,
-        #f60000,
-        #fbbc05,
-        #ffd653,
-        #34a853,
-        #34a853,
-        #03c0fc
-      )
-      border-box;
-  border-radius: 24px;
-  border: 2px solid transparent;
-  color: black;
-  padding: 14px 20px;
-  margin: 8px 0;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 24px;
-  width: 100%;
-}
-.social-icon-1 img {
-  position: absolute;
-  left: 15px;
-  top: 9px;
-  height: 73%;
-}
-.sign-in-with-apple {
-  background: transparent;
-  border: 2px solid #000000;
-  color: black;
-  padding: 14px 20px;
-  border-radius: 24px;
-  margin: 8px 0;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 24px;
-  width: 100%;
-}
-
-.social-icon {
-  position: relative;
-  margin-top: 2rem;
-}
-.social-icon .fa-brands {
-  position: absolute;
-  top: 16px;
-  font-size: 40px;
-  color: #03c0fc;
-  left: 25px;
-}
-.social-icon .fa-apple {
-  position: absolute;
-  top: 16px;
-  font-size: 40px;
-  color: #03c0fc;
-  left: 25px;
-}
-.social-icon .fa-apple {
-  position: absolute;
-  top: 16px;
-  font-size: 40px;
-  color: black;
-  left: 25px;
-}
-.signup-link {
-  text-align: center;
-  margin-top: 2rem;
-  padding-bottom: 4rem;
-}
-.signup-link p {
-  font-size: 20px;
-  font-weight: 500;
-}
-.signup-link a {
-  font-size: 20px;
-  color: #000000;
-  font-weight: 600;
 }
