--- a/index.css
+++ b/index.css
@@ -526,5 +526,18 @@ input[type="checkbox"]:checked + label:after {
     line-height: 44px;
     font-weight: 300;
 }
+.carousel-inner>.item>img{
+  width: 100%;
+  height: 70rem;
+}
+.mobile-section-card{
+  display: none;
+}
+.mobile-navbar{
+  display: none;
+}
+.cart{
+  display: none;
+}
 
 /* ==================== Footer Section End ====================================== */
