--- a/index-responsive.css
+++ b/index-responsive.css
@@ -196,6 +196,7 @@
   }
   .padding-inner img {
     width: 100%;
+    height: 11rem;
   }
   /* ========= heart Shape ============== */
   input[type="checkbox"] {
@@ -395,12 +396,12 @@
     font-size: 22px;
     font-weight: 600;
     color: #d9d9d9;
-    line-height: 40px;
+    line-height: 20px;
   }
   .links-About a {
     color: white;
     font-size: 16px;
-    line-height: 44px;
+    line-height: 24px;
     font-weight: 300;
   }
 
