--- a/index.css
+++ b/index.css
@@ -530,7 +530,7 @@ input[type="checkbox"]:checked + label:after {
   width: 100%;
   height: 70rem;
 }
-.mobile-section-card{
+.main-div{
   display: none;
 }
 .mobile-navbar{
