--- a/index.css
+++ b/index.css
@@ -536,8 +536,8 @@ input[type="checkbox"]:checked + label:after {
 .mobile-navbar{
   display: none;
 }
-.cart{
+/* .cart{
   display: none;
-}
+} */
 
 /* ==================== Footer Section End ====================================== */
