--- a/index-responsive.css
+++ b/index-responsive.css
@@ -18,9 +18,10 @@
   }
   .cart {
     position: fixed;
-    top: 120px;
-    right: -100%;
-    width: 100%;
+    top: 0px;
+    left: -100%;
+    width: 88%;
+    z-index: 1;
     min-height: 100vh;
     padding: 20px;
     background-color: #7a87a3;
@@ -28,80 +29,27 @@
     transition: 0.3s;
   }
   .cart.active {
-    right: 0px;
+    left: 0px;
     position: absolute;
     z-index: 1;
   }
-  .cart-title {
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-top: 2rem;
-  }
-  .cart-box {
-    display: grid;
-    grid-template-columns: 32% 50% 18%;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
-  .cart-img {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-    padding: 10px;
-  }
-  .detail-box {
-    display: grid;
-    row-gap: 0.5rem;
-  }
-  .cart-product-title {
-    font-size: 1.5rem;
-    text-transform: uppercase;
-  }
-  .cart-price {
-    font-weight: 500;
-  }
-  .cart-quantity {
-    border: 1px solid var(--text-color);
-    outline-color: var(--main-color);
-    width: 2.4rem;
-    text-align: center;
-    font-size: 1rem;
-  }
+  
   .cart-remove {
     font-size: 24px;
     color: var(--main-color);
     cursor: pointer;
   }
-  .total {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 1.5rem;
-    border-top: 1px solid var(--text-color);
-  }
-  .total-title {
-    font-size: 1rem;
+  .cart-title{
+    text-align: center;
     font-weight: 600;
+    padding-bottom: 2rem;
   }
-  .total-price {
-    margin-left: 0.5rem;
-  }
-  .btn-buy {
-    display: flex;
-    margin: 1.5rem auto 0 auto;
-    padding: 12px 20px;
-    border: none;
-    background: aqua;
-    color: var(--bg-color);
-    font-size: 1rem;
-    font-weight: 800;
-    cursor: pointer;
-    border-radius: 12px;
-    transition: transform 0.5s;
-  }
-  .btn-buy:hover {
-    transform: scale(1.2);
+  .fa-xmark{
+    padding: 3px;
+    position: absolute;
+    top: 40px;
+    font-size: 26px;
+    right: 7px;
   }
   #close-cart {
     position: absolute;
@@ -111,7 +59,52 @@
     color: var(--text-color);
     cursor: pointer;
   }
-
+   /* ============= Drop Down Menu ======================== */
+   .dropbtn {
+    background-color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: white;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: white;
+  }
+  .fa-chevron-down{
+    margin-left: 15rem;
+    font-size: 25px;
+    padding-left: 22px;
+    border-left: 1px solid black;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+  
   /* --------------- Navbar Menu For Mobile End -------------------------------------------- */
   .container_2 {
     position: relative;
