--- a/index-responsive.css
+++ b/index-responsive.css
@@ -1,4 +1,39 @@
 @media (min-width: 340px) and (max-width: 480px) {
+
+  /*======================= Home section div Position Fixed ====================== */
+  
+  .icons{
+    gap: 6rem;
+    position: fixed;
+    bottom: 1%;
+    display: flex;
+    background-color: white;
+    padding: 12px;
+    width: -webkit-fill-available;
+    border-radius: 34px;
+    padding-inline: 2rem;
+  }
+  .fixed-div-section{
+    display: block;
+   }
+  .icons a{
+   font-size: 2em;
+   color: black;
+   position: relative;
+  }
+  .digit-count1{
+    font-size: 11px;
+    font-weight: 600;
+    position: absolute;
+    border-radius: 50%;
+    color: white;
+    border: 1px solid white;
+    top: 3px;
+    right: -9px;
+    padding: 3px 7px;
+    background-color: black;
+  }
+  /* ======================= Position Fixed Section End ============================ */
   .mobile-navbar i {
     font-size: 34px;
   }
@@ -7,7 +42,7 @@
     align-items: center;
     padding-inline: 4rem;
   }
-  .mobile-navbar h2{
+  .mobile-navbar h2 {
     margin-left: 4rem;
   }
   .mobile-navbar img {
@@ -24,7 +59,7 @@
     z-index: 1;
     min-height: 100vh;
     padding: 20px;
-    background-color: #7a87a3;
+    background-color: white;
     box-shadow: -2px 0 4px hsl(0deg 4% 15% / 10%);
     transition: 0.3s;
   }
@@ -33,18 +68,18 @@
     position: absolute;
     z-index: 1;
   }
-  
+
   .cart-remove {
     font-size: 24px;
     color: var(--main-color);
     cursor: pointer;
   }
-  .cart-title{
+  .cart-title {
     text-align: center;
     font-weight: 600;
-    padding-bottom: 2rem;
+    padding-bottom: 3rem;
   }
-  .fa-xmark{
+  .fa-xmark {
     padding: 3px;
     position: absolute;
     top: 40px;
@@ -59,34 +94,40 @@
     color: var(--text-color);
     cursor: pointer;
   }
-   /* ============= Drop Down Menu ======================== */
-   .dropbtn {
+  /* ============= Drop Down Menu ======================== */
+  .dropbtn {
     background-color: white;
     padding: 16px;
     font-size: 16px;
+    display: flex;
     border: none;
     cursor: pointer;
   }
-  
-  .dropbtn:hover, .dropbtn:focus {
+
+  .dropbtn:hover,
+  .dropbtn:focus {
     background-color: white;
   }
-  
+  .best-seller {
+    padding: 8px;
+    font-size: 16px;
+    padding-block: 2rem;
+    border-bottom: 1px solid #c4c4c4;
+  }
+
   .dropdown {
     position: relative;
     display: inline-block;
+    border-bottom: 1px solid #c4c4c4;
   }
-  
+
   .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
+    background-color: white;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  
+
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -94,17 +135,73 @@
     display: block;
     background-color: white;
   }
-  .fa-chevron-down{
+  .fa-chevron-down {
     margin-left: 15rem;
     font-size: 25px;
     padding-left: 22px;
-    border-left: 1px solid black;
+    border-left: 1px solid #C4C4C4;;
   }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-  .show {display: block;}
-  
+  .cart{
+    display: block;
+   }
+  .dropdown a:hover {
+    background-color: #ddd;
+  }
+
+  .show {
+    display: block;
+  }
+  /* ================ Drop Down 2 =========================== */
+  /* ============= Drop Down Menu ======================== */
+  .dropbtn1 {
+    background-color: white;
+    padding: 16px;
+    font-size: 16px;
+    display: flex;
+    border: none;
+    cursor: pointer;
+  }
+
+  .dropbtn1:hover,
+  .dropbtn1:focus {
+    background-color: white;
+  }
+
+  .dropdown1 {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px solid #c4c4c4;
+  }
+
+  .dropdown-content1 {
+    display: none;
+    background-color: white;
+    overflow: auto;
+    z-index: 1;
+  }
+
+  .dropdown-content1 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: white;
+  }
+    .dropbtn1 .fa-chevron-down {
+    margin-left: 13rem;
+    font-size: 25px;
+    padding-left: 22px;
+    border-left: 1px solid #C4C4C4;
+  }
+
+  .dropdown1 a:hover {
+    background-color: #ddd;
+  }
+
+  .show1 {
+    display: block;
+  }
+  /* ================== drop Down 2 End =================================== */
   /* --------------- Navbar Menu For Mobile End -------------------------------------------- */
   .container_2 {
     position: relative;
@@ -366,6 +463,7 @@
   }
   .footer-main-div {
     display: grid;
+    padding-bottom: 10rem;
     grid-template-columns: auto;
     gap: 10px;
     background-color: #11575c;
